--- a/index.html
+++ b/index.html
@@ -5,96 +5,84 @@
     <title>Contact Us</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-.headerlogo{background-color:#0a1b31;text-align:center;color: white;padding-top:50px;font-size:50px;font-family:"Verdana"}
+.headerlogo{background-color:#0a1b31;color: white;padding:40px; }
+.form { text-align: center;}
+
+input {
+  width: 20%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+.address{ text-align: center;}
 .fa {
   padding: 20px;
-  font-size: 40px;
-  width: 50px;
+  font-size: 30px;
+  width: 40px;
   text-align : center;
   text-decoration: none;
   margin: 8px 2px;
 }
-
+.fa:hover{color:grey;}
 .fa-facebook {
   background: #3B5998;
   color: white;
+border: solid;
+border-radius: 100px;
 }
 .fa-linkedin {
   background: #007bb5;
-  color: white;
+  color: white;border: solid;
+border-radius: 100px;
 }
 .fa-instagram {
   background: #125688;
-  color: white;
+  color: white;border: solid;
+border-radius: 100px;
 }
 
-
+.icons{ text-align: center;}
 .footerlogo{background-color:#0a1b31;text-align:center;height:200px;color: white;font-family:"Verdana"}
 </style>
 </head>
 <body>
     <header>
         <div class="headerlogo">
-            <img src="logo.png">
+            <img src="logo.png"  style =" width: 100px; height: 100px ;  float:left, margin : 30px">
+
+<img src="ucclogo.png"  style =" width: 100px; height: 100px ;  float:right; margin : 30px">
+
             
         </div>
     </header>
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-instagram"></a>
-<a href="#" class="fa fa-linkedin"></a>
-    <!-- <div class="main">
-        <div class="links">
-            <div class="email">
-                <a href="#">
-                    <img src="xd.png" width="50" height="50" style= "float:left;margin:50px,20px,50px,20px;dispaly:flex">
-                    <div class="emailucc">
-                        EMail
-                    </div>
-                </a>
+
+    <h2 style= " writing-mode: vertical-rl; float: right; display: flex; font-family:Papyrus, sans-serif;text-align: center; font-size: 50px;margin:40px;color: black; 
+  border: 10px solid currentcolor;background-color:grey "> Get in touch ! </h2>
+
+            <div class="form">
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" ><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" ><br>
+  <label for ="Email"> Email Address:</label><br>
+<input type = "text" id="email" name="email" > <br>
+<label for="Query">Query:</label><br>
+  <input type="text" id="query" name="query" ><br>
+
+<input type="submit" value="Submit">
+</form> 
+
+
             </div>
 
-            <div class="insta">
-                <a href="#">
-                    <img src="ig.png" width="50" height="50" style= "float:left;margin:50px,20px,50px,20px;dispaly:flex" >
-                    <div class="instaucc">
-                        INSTA
-                    </div>
-                </a>
-            </div>
-
-            <div class="fb">
-                <a href="#">
-                    <img src="fb.png" width="50" height="50" style= "float:left;margin:50px,20px,50px,20px;dispaly:flex">
-                    <div class="fbucc">
-                        FB
-                    </div>
-                </a>
-            </div>
-
-            <div class="linkedin">
-                <a href="#">
-                    <img src="link.png" width="50" height="50" style= "float:left;margin:50px,20px,50px,20px;dispaly:flex">
-                    <div class="linkedinucc">
-                        LINKEDIN
-                    </div>
-                </a>
-            </div>
-
-        </div>-->
-
-
-
-            <div class="location">
+<div class="location">
                 <a href="https://goo.gl/maps/6c3m85f89QicsF1c9">
                     <img src="">
-                    <div class="locationucc">
+                    <div class="locationucc" style= "text-align:center; font-family: verdana">
                         LOCATION
                     </div>
                 </a>
-            </div>
-
-            <div class="form">
-
             </div>
 
             <footer>
@@ -102,8 +90,8 @@
                     <img src="#">
                 </div>
 
-                <div class="address" style= " Background-color: tomato; opacity:0.7">
-                    <b style= " text-align:center; font-size:30px; font-family: copperplate">CONTACT US</b>
+                <div class="address" >
+                    <b style= " text-align : center; font-size:30px; font-family: copperplate">CONTACT US</b>
 <br>
                     <b>J.C Bose University of Science & Technology, YMCA, Faridabad</b>
 
@@ -111,14 +99,10 @@
 
                     Phone:XXXXXXXXX
                 </div>
-
-                <div class="links" style =" text-align: center">
-                    <b>Quick Links</b>
-                    <ul >
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
+<div class= "icons">
+<a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-instagram"></a>
+<a href="#" class="fa fa-linkedin"></a>
                 </div>
             </footer>
 
